# runtime

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
include/: allocator.h  allocator_debug.h  status.h
src/: allocator.c  allocator_debug.c
tests/: allocator_test.c  test_utils.h
tools/: main.c
